--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@ color:red;
 <a name="top"></a>
 <header>
 <div class="container">
-  <a href="index.html"><img src="logo.jpg" alt=" pic of logo" class="logo"></a>
+  <a href="index.html"><img src="logo.JPG" alt=" pic of logo" class="logo"></a>
 
 <nav>
         <ul>
@@ -33,15 +33,15 @@ color:red;
 </div>
 </header>
 <div class="gallery">
-<a href="pic_1.jpg"><img src="pic1.jpg"></a>
-<a href="pic_2.jpg"><img src="pic2.jpg"></a>
-<a href="pic_3.jpg"><img src="pic3.jpg"></a>
-<a href="pic_4.jpg"><img src="pic4.jpg"></a>
-<a href="pic_5.jpg"><img src="pic5.jpg"></a>
-<a href="pic_6.jpg"><img src="pic6.jpg"></a>
-<a href="pic_7.jpg"><img src="pic7.jpg"></a>
-<a href="pic_8.jpg"><img src="pic8.jpg"></a>
-<a href="pic_9.jpg"><img src="pic9.jpg"></a>
+<a href="pic_1.JPG"><img src="pic1.JPG"></a>
+<a href="pic_2.JPG"><img src="pic2.JPG"></a>
+<a href="pic_3.JPG"><img src="pic3.JPG"></a>
+<a href="pic_4.JPG"><img src="pic4.JPG"></a>
+<a href="pic_5.JPG"><img src="pic5.JPG"></a>
+<a href="pic_6.JPG"><img src="pic6.JPG"></a>
+<a href="pic_7.JPG"><img src="pic7.JPG"></a>
+<a href="pic_8.JPG"><img src="pic8.JPG"></a>
+<a href="pic_9.JPG"><img src="pic9.JPG"></a>
 </div>
 
 
