--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ color:red;
 <a name="top"></a>
 <header>
 <div class="container">
-  <a href="index.html"><img src="logo.jpg" alt=" pic of logo" class="logo"></a>
+  <a href="index.html"><img src="logo.JPG" alt=" pic of logo" class="logo"></a>
 
 <nav>
         <ul>
@@ -48,7 +48,7 @@ After realizing his weight had increased to 240 pounds, he decided to enlist in 
 <br><br>
 Some Googling led JIM to a nearby gym-HEALTH HAVEN—that specialized in dramatic body transformations. At first, JIM was skeptical, but ultimately signed up with the gym. With the help of a trainer, the NY man learned about counting macros: the carbs, protein, and fat in food. Changing his diet, logging at least 10,000 steps each day, and training three days a week helped Ellengold see results. Over time, he increased gym sessions and steps, resulting in a 40-pound weight loss in just 3 months!
 </p>
-<img src="jim.jpg"alt="pic of jim" class="jim" width="400px" height="700px" class="pic" >
+<img src="jim.JPG"alt="pic of jim" class="jim" width="400px" height="700px" class="pic" >
 <br><br>
 <hr>
 <br>
@@ -65,7 +65,7 @@ Some Googling led JIM to a nearby gym-HEALTH HAVEN—that specialized in dramati
 Once she joined -HEALTH HAVEN- weight loss program Sarah was able to cut out fast food, reduce her portion sizes, and start exercising daily for 45 minutes. She lost 190 pounds in two years, and today, she says she takes things "one meal, or one moment, at a time."
 </p>
 
-<img src="sarah.jpg"alt="pic of sarah" class="sarah" width="400px" height="700px" class="pic">
+<img src="sarah.JPG"alt="pic of sarah" class="sarah" width="400px" height="700px" class="pic">
 <hr>
 <br><br>
 <h1>PAM LOST 50 POUNDS IN 4 MONTHS!</h1>
@@ -79,7 +79,7 @@ She lost 10 pounds in the first month, which gave her the motivation to clean up
 <br><br>
 She's since lost 90 pounds. Carving 30 minutes a day for herself has made all of the difference: "So many of us tell ourselves that we're selfish if we make time for ourselves, especially if we care for families," she says. "But the 30 minutes a day I made for myself has led to me playing outside more with my kids, and being a more confident mom!"
 </p>
-<img src="pam.jpg"alt="pic of pam" class="pam" width="400px" height="700px" class="pic">
+<img src="pam.JPG"alt="pic of pam" class="pam" width="400px" height="700px" class="pic">
 <br>
 </main>
 
