--- a/joinus.html
+++ b/joinus.html
@@ -65,7 +65,7 @@ function validateText()
 <a name="top"></a>
 <header>
 <div class="container">
-  <a href="index.html"><img src="logo.jpg" alt=" pic of logo" class="logo"></a>
+  <a href="index.html"><img src="logo.JPG" alt=" pic of logo" class="logo"></a>
 
 <nav>
         <ul>
